0.61.1
------
1. Fix setting of default style. Fixes odd behaviour of config dialog!

0.61
----
 1. Only draw coloured border for moused-over items if they are enabled!
 2. Fix squred off corner in KTabWidgets when tabs are hidden.
 3. Fix corners of sunken Q3ScrollViews.
 4. Draw a sunken border around KPopupMenu titles.
 5. Draw toolbar arrows after icon, so that they do not get covered by
    the icon.
 6. Fix some weird alignment problems with KDE4 HIG.
 7. Fix default margin settings - these were too small.
 8. Add option to draw line after frameless groupbox title.
 9. Add option to use faded lines (toolbar separators, menutitem separators,
    etc.)
10. Support QLabel buddy widgets, as per KStyle.
11. Adjust focus margins on checks/radios that don't have text.
12. Fix misdrawn gradients in kwin's buttons of moveable maximised windows.
13. 'Fix' Konqueror's menubar height.
14. In config dialog, only enable 'colour seleected tab' checkbox if tab
    appearance is gradient or inverted.
15. Fix systemsettings crash with animated progressbars.
16. Fix animation of progressbars.
17. Fix applying of KDE4 colors to non-KDE4 applications that have a KComponentData.
18. Fix slight overpainting of corners of active tab.
19. Dont darken background of dock widget titlebars, just draw a line underneath.
20. Dont draw menuitem separator titles.
21. If print properties dialog title is empty, then use title from print dialog.
    This stops the properites window from having the executable name as its title.
22. Fix clipping of pressed combo box text.
23. Make 'filled focus' fill the complete widget for buttons and combos.
24. Use button text colour for combo boxes.
25. Add 'none' to toolbar handles and splitters style.
26. Change defaults:
        Button effect: Shadow
        Mouse over: Glow
        Default button indicator: Glow
        V arrows
        Flat toolbars
        Filled focus
        Gradient selection
        Flat scrollbar buttons
        No combo line